Some more changes
Co-authored-by: Rushi1311 <Rushi1311@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -23,14 +23,7 @@ title: Home
         <div class="col-lg-12">
          <h2>De-industrialization & anti-industrialism</h2>
          <p>
-          We are a Startup based out of Visakhapatnam India Working in
-          sustainable multidisciplinary verticals Such as Health Care Point of
-          Care Therapeutic Applications, Automotive, Clean Energy,2d & 3d
-          Advanced Materials (Graphene, CNT, Mxenes), Bio Materials, Nano
-          Materials, MEMS, Semiconductors, Circular Economy, Energy Storage,
-          Renewable Energy, Carbon Capture Storage, Hydrogen Fuel Cell Vehicles
-          to reduce the carbon footprint for Existing internal combustion engine
-          vehicles creating a viable ecosystem.
+          Innovation , Technology Transfer, R&D, Lab, 3D Bioprinting , additive manufacturing,  Reducing  Manufacturing Cost, reverse engineering , Collaborations, Partners , Ethical Work Place, Deep Tech, Automation & Electrification, E-mobility, Data Driven, OEM, Global Supply Chain Management, Transparency are our key areas of interest, no conflict of interest.
          </p>
         </div>
         <div class="col-lg-12">
@@ -89,6 +82,7 @@ title: Home
    </div>
   </div>
  </div>
+ 
  <div
   class="container-fluid wow fadeIn"
   data-wow-duration="1s"
@@ -99,7 +93,7 @@ title: Home
     <div class="loop owl-carousel">
      <div class="item">
       <a href="https://www.vizagsteel.com/">
-       <div class="portfolio-item customCards">
+       <div class="portfolio-item">
         <div class="thumb">
          <img src="https://www.vizagsteel.com/photos/logonew.jpg" alt="" />
         </div>
@@ -178,6 +172,27 @@ title: Home
   </div>
  </div>
 </div>
+</div>
+
+<div id="about" class="our-portfolio section">
+  <div class="container">
+   <div class="row">
+    <div class="col-lg-10">
+     <div
+      class="section-heading wow fadeInLeft"
+      data-wow-duration="1s"
+      data-wow-delay="0.3s"
+     >      <h4>About Us</h4>
+      <div class="line-dec"></div>
+      <div>
+       <br />
+       We are a Startup based out of Visakhapatnam India Working in sustainable multidisciplinary verticals  Such as Health Care Point of Care Therapeutic Applications , Automotive, Clean Energy ,2d & 3d Advanced Materials (Graphene, CNT, Mxenes) ,Bio Materials , Nano Materials, MEMS, Semiconductors,  Circular Economy, Energy Storage, Renewable Energy , Carbon Capture Storage , Hydrogen Fuel Cell Vehicles to reduce carbon foot print for Existing internal combustion engine vehicles creating a viable eco system
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+</div>
 
 <div id="services" class="services section">
  <div class="container">
@@ -252,12 +267,12 @@ title: Home
               <div class="left-text">
                <h4>Health Care</h4>
                <p>
-                Solving Health Care by providing new biomaterials, and
+                Solving Health Care by providing new Biomaterials, and
                 technology to existing Health Care Lab and point of care patient
                 diagnostics Chronic diseases management with a focus on
                 pulmonary conditions Cancer diagnostics and treatment progress
-                E-health devices, biosensors, microfluidics, organ-on-chip
-                applications, and services.
+                E-health devices, biosensors, Microfluidics, Organ-on-chip,Drug delivery,Drug discovery and
+                Applications.
                </p>
               </div>
              </div>
@@ -278,7 +293,7 @@ title: Home
               <div class="left-text">
                <h4>Automotive Applications</h4>
                <p>
-                Remanfacturing Internal Combustion Engine Vehicles to Fuel Cell Electric Vehicles Work Using Hydrogen.
+                Remanufacturing Internal Combustion Engine Vehicles to Fuel Cell Electric Vehicles Work Using Hydrogen.
  The abundance of hydrogen in the universe means that hydrogen fuel cells are a renewable source of energy. They are also a clean method of energy production, although there are still some concerns over the use of fossil fuels for hydrogen extraction as well as the potential carbon footprint associated with hydrogen transportation, for example.
 However, hydrogen fuel cell technology has the potential to be a completely green and renewable source of power, with the only by-products being heat (which can be used elsewhere) and water.
 In addition, fuel cells do not run down or need recharging like batteries, so long as there is a constant source of fuel and oxygen.
@@ -320,75 +335,6 @@ Photovoltaic noise barriers / Solar noise barriers can be used on roads and high
           </div>
          </li>
          <li>
-          <div>
-           <div class="thumb">
-            <div class="row">
-             <div class="col-lg-6 align-self-center">
-              <div class="left-text">
-               <h4>Online Shopping &amp; Tracking ID</h4>
-               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
-                doerski token. dover lipsum lorem and the others.
-               </p>
-               <div class="ticks-list">
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-               </div>
-               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt.
-               </p>
-              </div>
-             </div>
-             <div class="col-lg-6 align-self-center">
-              <div class="right-image">
-               <img src="assets/images/services-image-04.jpg" alt="" />
-              </div>
-             </div>
-            </div>
-           </div>
-          </div>
-         </li>
-         <li>
-          <div>
-           <div class="thumb">
-            <div class="row">
-             <div class="col-lg-6 align-self-center">
-              <div class="left-text">
-               <h4>Enjoy &amp; Travel</h4>
-               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
-                doerski token. dover lipsum lorem and the others.
-               </p>
-               <div class="ticks-list">
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-               </div>
-               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt.
-               </p>
-              </div>
-             </div>
-             <div class="col-lg-6 align-self-center">
-              <div class="right-image">
-               <img src="assets/images/services-image.jpg" alt="" />
-              </div>
-             </div>
-            </div>
-           </div>
-          </div>
-         </li>
         </ul>
        </div>
       </div>
@@ -532,14 +478,124 @@ Workshops
    </div>
   </div>
  </div>
+</div>
 
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="partnersCard">
-            <img src="https://www.ccamp.res.in/sites/default/files/CCAMP.png">
-          </div>
-        </div>
+<div id="portfolio" class="our-portfolio section">
+  <div class="container">
+   <div class="row">
+    <div class="col-lg-10">
+      <div
+      class="section-heading wow fadeInDown"
+      data-wow-duration="1s"
+      data-wow-delay="0.5s"
+     >
+      <h4>Partners</em></h4>
+      <div class="line-dec"></div>
+     </div>
     </div>
+   </div>
   </div>
+  <div
+   class="container-fluid wow fadeIn"
+   data-wow-duration="1s"
+   data-wow-delay="0.7s"
+  >
+   <div class="row">
+    <div class="col-lg-12">
+     <div class="loop owl-carousel">
+      <div class="item">
+       <a href="https://www.startupindia.gov.in/">
+        <div class="portfolio-item">
+         <div class="thumb">
+          <img src="./assets/images/partners/startup-india-logo.png" alt="" />
+         </div>
+         <div class="down-content">
+          <h4>Start Up India<br><br></h4>
+         </div>
+        </div>
+       </a>
+      </div>
+ 
+      <div class="item">
+       <a href="https://www.ccamp.res.in">
+        <div class="portfolio-item">
+         <div class="thumb">
+          <img src="./assets/images/partners/ccamp.png" alt="" />
+         </div>
+         <div class="down-content">
+          <h4>CCAMP<br><br></h4>
+         </div>
+        </div>
+       </a>
+      </div>
+ 
+      <div class="item">
+       <a href="https://amtz.in/">
+        <div class="portfolio-item">
+         <div class="thumb">
+          <img
+           src="./assets/images/partners/amtz.png"
+           alt=""
+          />
+         </div>
+         <div class="down-content">
+          <h4>Andhra Pradesh MedTech Zone</h4>
+         </div>
+        </div>
+       </a>
+      </div>
+ 
+    </div>
+   </div>
+  </div>
+ </div>
+ </div>
+
+ <div id="career" class="our-portfolio section">
+  <div class="container">
+   <div class="row">
+    <div class="col-lg-10">
+     <div
+      class="section-heading wow fadeInLeft"
+      data-wow-duration="1s"
+      data-wow-delay="0.3s"
+     >      <h4>Career</h4>
+      <div class="line-dec"></div>
+      <div>
+       <br />
+       We are hiring Post Doc Research Scholars from all IIT’S & IISc across India and MOU , R&D , Lab Resources.
+       It is a multidisciplinary field that involves Engineering, Physics, Chemistry, Biochemistry, Electrochemistry, Biotechnology, Bio Engineering, Nanotechnology, Physicians , Mechatronics, Material Science, Computers and Data Science, Electrical and Electronics, HRM, LAB Operators, Technicians huge workforce for daily operations in supply chain management.
+      </div>
+      <div>
+        <b>We are looking for companies CTO & COO.</b>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+</div>
+
+<div id="career" class="our-portfolio section">
+  <div class="container">
+   <div class="row">
+    <div class="col-lg-10">
+     <div
+      class="section-heading wow fadeInLeft"
+      data-wow-duration="1s"
+      data-wow-delay="0.3s"
+     >      <h4>Our Team</h4>
+      <div class="line-dec"></div>
+      <div>
+        <img src="./assets/images/team/venu.jfif" style="width: 150px; height: 150px; border-radius: 50%; margin: 20px;">
+        <h5>
+          Venu Madhav
+        </h5>
+        <h6>
+          Founder & Serial Entrepreneur  <br>
+        </h6>       
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+</div>
