Contact Page added

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Workshops
           </div>
          </div>
        </div>
- 
+       
        <div class="item">
          <div class="portfolio-item customCards">
           <div class="down-content">
@@ -567,7 +567,8 @@ Workshops
        It is a multidisciplinary field that involves Engineering, Physics, Chemistry, Biochemistry, Electrochemistry, Biotechnology, Bio Engineering, Nanotechnology, Physicians , Mechatronics, Material Science, Computers and Data Science, Electrical and Electronics, HRM, LAB Operators, Technicians huge workforce for daily operations in supply chain management.
       </div>
       <div>
-        <b>We are looking for companies CTO & COO.</b>
+        <br/>
+        We are looking for companies CTO & COO onboarding.
       </div>
      </div>
     </div>
@@ -592,7 +593,22 @@ Workshops
         </h5>
         <h6>
           Founder & Serial Entrepreneur  <br>
-        </h6>       
+        </h6> 
+        <h4>
+          <a href="https://www.linkedin.com/in/venu-madhav-5239a4199/" target="_blank">
+            <i class="fa fa-linkedin"></i>
+          </a>
+          &nbsp;&nbsp;
+          <a href="tel://9848805721" target="_blank">
+            <i class="fa fa-phone"></i>
+          </a>
+          &nbsp;
+          &nbsp;
+          <a href="mailto:venu@neolithicsystem.com" target="_blank">
+            <i class="fa fa-envelope"></i>
+          </a>
+        </h4> 
+             
       </div>
      </div>
     </div>
