--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ title: Home
         <div class="col-lg-12">
          <h2>De-industrialization & anti-industrialism</h2>
          <p>
-          Innovation , Technology Transfer, R&D, Lab, 3D Bioprinting , additive manufacturing,  Reducing  Manufacturing Cost, reverse engineering , Collaborations, Partners , Ethical Work Place, Deep Tech, Automation & Electrification, E-mobility, Data Driven, OEM, Global Supply Chain Management, Transparency are our key areas of interest, no conflict of interest.
+          Area of interest of Works
+         </p>
+         <p>
+          Innovation, Technology Transfer, Research and Development, Lab, Commercial Production, 3D Bioprinting, Additive Manufacturing, Reducing Manufacturing Cost, Reverse Engineering, Collaborations, Partners, Ethical Work Place, Deep Tech, Automation & Electrification, E-mobility, Data Driven, OEM, Global Supply Chain Management, Transparency are our key areas of interest, No conflict of interest.
          </p>
         </div>
         <div class="col-lg-12">
@@ -62,21 +65,21 @@ title: Home
      data-wow-delay="0.3s"
     >
      <!-- <h6>Our Portofolio</h6> -->
-     <h4>Industries producing Carbon Emissions</h4>
+     <h4>Industries Producing Carbon Emissions</h4>
      <div class="line-dec"></div>
      <div>
       <br />
-      Carbon and other toxic gaseous, materials capturing by building
+      Carbon and other toxic gaseous, Materials capturing and Restoring by building
       Infrastructure and Catalysts to fight Industrial Pollution, Global
       Warming, Fossil Fuels, Oil Exploitation, and Climate Change reducing the
       number of greenhouse gases in our atmosphere to mitigate global warming
       and its associated impacts is a task that all nations must face. The
-      industry and private individuals – such as private heating system owners –
-      must also find ways of reducing CO2 emissions Using Technology and Data.
+      industry and private individuals such as private heating system owners must
+      also find ways of reducing CO2 emissions Using Technology and Data.
       It's Cost-effective but will pay off after a certain time by producing
-      abundant value by adding products of carbon fibers, Hydrogen, Graphene Composites,
-      Mxenes, and other carbon allotropes by producing lab and commercial production for recreating Product and Application
-      Development from an advanced material science perspective.
+      abundant value adding products such as Carbon Fibers, Hydrogen, Graphene Composites,
+      Mxenes and other Carbon Allotropes by producing lab and commercial production for recreating Product and Application
+      Development from an Advanced Material science perspective.
      </div>
     </div>
    </div>
@@ -186,7 +189,7 @@ title: Home
       <div class="line-dec"></div>
       <div>
        <br />
-       We are a Startup based out of Visakhapatnam India Working in sustainable multidisciplinary verticals  Such as Health Care Point of Care Therapeutic Applications , Automotive, Clean Energy ,2d & 3d Advanced Materials (Graphene, CNT, Mxenes) ,Bio Materials , Nano Materials, MEMS, Semiconductors,  Circular Economy, Energy Storage, Renewable Energy , Carbon Capture Storage , Hydrogen Fuel Cell Vehicles to reduce carbon foot print for Existing internal combustion engine vehicles creating a viable eco system
+       We are a Startup based out of Visakhapatnam India Working in sustainable multidisciplinary verticals Such as Health Care Point of Care Therapeutic Applications, Automotive, Clean Energy, 2D & 3D Advanced Materials(Graphene, CNT, Mxenes), Bio Materials, Nano Materials, MEMS, Semiconductors, Circular Economy, Energy Storage, Renewable Energy, Carbon Capture Storage, Hydrogen Fuel Cell Vehicles to reduce carbon foot print for Existing internal combustion engine vehicles creating a viable eco system.
       </div>
      </div>
     </div>
@@ -267,12 +270,17 @@ title: Home
               <div class="left-text">
                <h4>Health Care</h4>
                <p>
-                Solving Health Care by providing new Biomaterials, and
-                technology to existing Health Care Lab and point of care patient
-                diagnostics Chronic diseases management with a focus on
-                pulmonary conditions Cancer diagnostics and treatment progress
-                E-health devices, biosensors, Microfluidics, Organ-on-chip,Drug delivery,Drug discovery and
-                Applications.
+                Universal Health Care our vision is to create a Sustainable System Zero Preventable Deaths with
+                timely molecular and cellular Patient Data.
+                Our Mission is to revolutionise healthcare with Continuous Molecular and Cellular Monitoring.
+                In a healthcare setting, our patient molecular and cellular monitoring solution will deliver earlier,
+                accurate insights for clinicians. This will lead to better patient outcomes and a reduced cost burden on healthcare systems.
+                The Neolithic platform will provide a new standard of care for patients who would otherwise require extended hospital stays and repeated blood draws.
+                Solving Health Care by providing new Biomaterials and Technology to existing Health Care Lab and point of care patient
+                diagnostics Chronic diseases management with a focus on pulmonary conditions Cancer diagnostics and treatment progress
+                E-health devices, Biosensors, Microfluidics, Organ-on-chip, Lab-on-a-chip, Drug Delivery, Drug Discovery, 
+                Biotech and Biomedical scientific services, Stem Cell Engineering, Tissue Enginnering, Regenerative medicine,
+                Healing Patients through Holistic Approach.
                </p>
               </div>
              </div>
@@ -294,9 +302,9 @@ title: Home
                <h4>Automotive Applications</h4>
                <p>
                 Remanufacturing Internal Combustion Engine Vehicles to Fuel Cell Electric Vehicles Work Using Hydrogen.
- The abundance of hydrogen in the universe means that hydrogen fuel cells are a renewable source of energy. They are also a clean method of energy production, although there are still some concerns over the use of fossil fuels for hydrogen extraction as well as the potential carbon footprint associated with hydrogen transportation, for example.
-However, hydrogen fuel cell technology has the potential to be a completely green and renewable source of power, with the only by-products being heat (which can be used elsewhere) and water.
-In addition, fuel cells do not run down or need recharging like batteries, so long as there is a constant source of fuel and oxygen.
+                The abundance of hydrogen in the universe means that hydrogen fuel cells are a renewable source of energy. They are also a clean method of energy production, although there are still some concerns over the use of fossil fuels for hydrogen extraction as well as the potential carbon footprint associated with hydrogen transportation, for example.
+                However, hydrogen fuel cell technology has the potential to be a completely green and renewable source of power, with the only by-products being heat (which can be used elsewhere) and water.
+                In addition, fuel cells do not run down or need recharging like batteries, so long as there is a constant source of fuel and oxygen.
                </p>
               </div>
              </div>
@@ -316,12 +324,13 @@ In addition, fuel cells do not run down or need recharging like batteries, so lo
              <div class="col-lg-6 align-self-center">
               <div class="left-text">
                <h4>Solving Energy Efficiency</h4>
+                <br>
+                Energy as a Commodity
+                <br>
                <p>
-                Energy Harvesting
-Building Domestic Grids in Connected Network source from renewable energy.
-Floating solar farms (floatovoltaics) are cheaper to install and can produce more power than land-based solar panels due to the cooling effect of water.
-Building-integrated solar tech allows us to incorporate solar panel production into the architecture of a building.
-Photovoltaic noise barriers / Solar noise barriers can be used on roads and highways to generate solar power while reducing noise pollution.
+                Major issue due to improper Power Crisis major daily operations are getting intrepet. We are Designing and Building Domestic Grids across all over India.
+                Renewable Energy Storage for Hospitals, Agricuture Farmers, Rural, Urban, Villages, 
+                Administrative offices, Schools, Colleges, Universities, Industries, Public Transportation, Railways.
                </p>
               </div>
              </div>
