--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@ title: Home
        <div class="row">
         <div class="col-lg-12">
          <h2>De-industrialization & anti-industrialism</h2>
-         <p>
+         <b>
           Area of interest of Works
-         </p>
+         </b>
          <p>
-          Innovation, Technology Transfer, Research and Development, Lab, Commercial Production, 3D Bioprinting, Additive Manufacturing, Reducing Manufacturing Cost, Reverse Engineering, Collaborations, Partners, Ethical Work Place, Deep Tech, Automation & Electrification, E-mobility, Data Driven, OEM, Global Supply Chain Management, Transparency are our key areas of interest, No conflict of interest.
+          Innovation, Technology Transfer, Research and Development, Lab, Commercial Production, 3D Bioprinting, Additive Manufacturing, Reducing Manufacturing Cost, Remanufacturing, Reverse Engineering, Collaborations, Partners, Ethical Work Place, Deep Tech, Automation & Electrification, E-mobility, Data Driven, OEM, Global Supply Chain Management, Transparency are our key areas of interest, No conflict of interest.
          </p>
         </div>
         <div class="col-lg-12">
          <div class="border-first-button scroll-to-section">
-          <a href="mailto:venu@neolithicsystem.com">Contact Us</a>
+          <a href="mailto:venu@neolithicsystem.com">COE in Advanced Materials</a>
          </div>
         </div>
        </div>
@@ -44,7 +44,7 @@ title: Home
        data-wow-delay="0.5s"
       >
        <img
-        src="./assets/images/powerPlant.jpg"
+        src="./assets/images/powerplant2.jpg"
         alt="https://pixabay.com/photos/power-plant-air-pollution-6698838/"
        />
       </div>
@@ -241,13 +241,13 @@ title: Home
           </div>
          </div>
 
-         <!--
+         <!-
          <div>
           <div class="thumb">
            <span class="icon"
             ><img src="assets/images/service-icon-04.png" alt=""
            /></span>
-           Shopping
+           Applications
           </div>
          </div>
          <div class="last-thumb">
@@ -255,7 +255,7 @@ title: Home
            <span class="icon"
             ><img src="assets/images/service-icon-01.png" alt=""
            /></span>
-           Traveling
+           Cellular Agriculture
           </div>
          </div> -->
         </div>
@@ -310,7 +310,7 @@ title: Home
              </div>
              <div class="col-lg-6 align-self-center">
               <div class="right-image">
-               <img src="./assets/images/automotive.svg" alt="" />
+               <img src="./assets/images/Automotive.jpg" alt="" />
               </div>
              </div>
             </div>
@@ -331,12 +331,14 @@ title: Home
                 Major issue due to improper Power Crisis major daily operations are getting intrepet. We are Designing and Building Domestic Grids across all over India.
                 Renewable Energy Storage for Hospitals, Agricuture Farmers, Rural, Urban, Villages, 
                 Administrative offices, Schools, Colleges, Universities, Industries, Public Transportation, Railways.
+                Energy Storage Applications: Hydrogen fuel Cell for automotive, Aluminium Graphene Ion,
+                Sodium Ion, Iron Air Batteries, Supercapacitors using clean, Green and Renewable Energy.
                </p>
               </div>
              </div>
              <div class="col-lg-6 align-self-center">
               <div class="right-image">
-               <img src="./assets/images/energy.svg" alt="" />
+               <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
               </div>
              </div>
             </div>
@@ -353,6 +355,55 @@ title: Home
   </div>
  </div>
 </div>
+<div>
+  <div class="thumb">
+   <div class="row">
+    <div class="col-lg-6 align-self-center">
+     <div class="left-text">
+      <h4>Applications</h4>
+      <b>
+        Graphene is being used today on a commercial scale to improve and add value to an impressive range of products and applications
+      </b>
+      <p>
+        Transportation-Road, Rail and Aerospace,
+        Chemicals, Plastics and Composites Building Materials, Concrete and Cement, Energy Storage, desalination, 
+        Graphene Electronics, Sensors and Devices, Consumer Goods, Coatings and Films, 
+        hygiene and healthcare, Medical science, Drug delivery, Biomedical applications, Graphene medical devices, 
+        Graphene in batteries and supercapacitors, wearable technology, Graphene transistors and Semiconductors, Graphene as a lubricant.
+      </p>
+     </div>
+    </div>
+    <div class="col-lg-6 align-self-center">
+     <div class="right-image">
+      <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+ <div>
+  <div class="thumb">
+   <div class="row">
+    <div class="col-lg-6 align-self-center">
+     <div class="left-text">
+      <h4>Cellular Agriculture</h4>
+       
+      <p>
+        Neo Meats is a cell-based meat and seafood company the first of its kind in South-East Asia.
+        Our mission is to bring delicious, sustainable, healthy seafood to your table, using our technology to grow meat from healthy cells instead of animals.
+        crustaceans like shrimps, crabs, Chicken, Lamb, Fish, lobsters and are the first in the world to do so using cellular agriculture technology.
+      </p>
+     </div>
+    </div>
+    <div class="col-lg-6 align-self-center">
+     <div class="right-image">
+      <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+
 
 
 <!-- Resources required -->
@@ -413,6 +464,14 @@ Workshops
         <div class="portfolio-item customCards">
          <div class="down-content">
           <h5><br>Infrastructure Development</h5>
+          <p>
+            It involves improvement of the quality of the various components of infrastructure, such as roads, power, water and sanitation.
+            The infrastructure sector primarily comprises of electricity, Roads, 
+            Railways, Irrigation, Water supply and sanitation, 
+            Infrastructure is considered to be the key for promoting sustainable and inclusive economic growth. So a great deal of policy emphasis has 
+            been placed on infrastructure devlopment for augmenting growth, Productivity and quality of life of the citizens of the developing country.
+            Clean Drinking Water, Seawater Reverse Osmosis Desalination (SWRO) is a process that removes salt and other contamination from salt water to produce fresh water.
+          </p>
          </div>
         </div>
       </div>
@@ -568,16 +627,18 @@ Workshops
       class="section-heading wow fadeInLeft"
       data-wow-duration="1s"
       data-wow-delay="0.3s"
-     >      <h4>Career</h4>
+     >      <h4>Career Opportunities</h4>
       <div class="line-dec"></div>
       <div>
-       <br />
-       We are hiring Post Doc Research Scholars from all IIT’S & IISc across India and MOU , R&D , Lab Resources.
-       It is a multidisciplinary field that involves Engineering, Physics, Chemistry, Biochemistry, Electrochemistry, Biotechnology, Bio Engineering, Nanotechnology, Physicians , Mechatronics, Material Science, Computers and Data Science, Electrical and Electronics, HRM, LAB Operators, Technicians huge workforce for daily operations in supply chain management.
+       <br/>
+       We are hiring Post Doc Research Scholars from all IIT’S & IISc across India and MOU, R&D, Lab Resources.
+       It is a multidisciplinary field that involves Engineering, Physics, Chemistry, Biochemistry, Electrochemistry, Biotechnology, Bio Engineering, Nanotechnology, Physicians, Mechatronics, Material Science, Computers and Data Science, Electrical and Electronics, HRM, LAB Operators, Technicians huge workforce for daily operations in supply chain management.
       </div>
       <div>
         <br/>
-        We are looking for companies CTO & COO onboarding.
+        <b>
+          We are looking for companies CTO & COO onboarding.
+        </b>
       </div>
      </div>
     </div>
@@ -616,8 +677,10 @@ Workshops
           <a href="mailto:venu@neolithicsystem.com" target="_blank">
             <i class="fa fa-envelope"></i>
           </a>
-        </h4> 
-             
+        </h4>
+        <b>
+          Website is under Development.
+        </b>
       </div>
      </div>
     </div>
