--- a/index.html
+++ b/index.html
@@ -347,51 +347,43 @@ title: Home
          </li>
          <li>
         </ul>
-       </div>
-      </div>
-     </div>
-    </div>
-   </div>
-  </div>
- </div>
-</div>
-<div>
-  <div class="thumb">
-   <div class="row">
-    <div class="col-lg-6 align-self-center">
-     <div class="left-text">
-      <h4>Applications</h4>
-      <b>
-        Graphene is being used today on a commercial scale to improve and add value to an impressive range of products and applications
-      </b>
+        <div>
+          <div class="thumb">
+           <div class="row">
+            <div class="col-lg-6 align-self-center">
+             <div class="left-text">
+              <h4>Cellular Agriculture</h4>
+               
+              <p>
+                Neo Meats is a cell-based meat and seafood company the first of its kind in South-East Asia.
+                Our mission is to bring delicious, sustainable, healthy seafood to your table, using our technology to grow meat from healthy cells instead of animals.
+                crustaceans like shrimps, crabs, Chicken, Lamb, Fish, lobsters and are the first in the world to do so using cellular agriculture technology.
+              </p>
+             </div>
+            </div>
+            <div class="col-lg-6 align-self-center">
+             <div class="right-image">
+              <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
+             </div>
+            </div>
+           </div>
+          </div>
+         </div>
+         <div>
+        <div class="thumb">
+       <div class="row">
+     <div class="col-lg-6 align-self-center">
+    <div class="left-text">
+    <h4>Applications</h4> 
+    <b>
+      Graphene is being used today on a commercial scale to improve and add value to an impressive range of products and applications.
+    </b>      
       <p>
         Transportation-Road, Rail and Aerospace,
-        Chemicals, Plastics and Composites Building Materials, Concrete and Cement, Energy Storage, desalination, 
-        Graphene Electronics, Sensors and Devices, Consumer Goods, Coatings and Films, 
-        hygiene and healthcare, Medical science, Drug delivery, Biomedical applications, Graphene medical devices, 
-        Graphene in batteries and supercapacitors, wearable technology, Graphene transistors and Semiconductors, Graphene as a lubricant.
-      </p>
-     </div>
-    </div>
-    <div class="col-lg-6 align-self-center">
-     <div class="right-image">
-      <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
-     </div>
-    </div>
-   </div>
-  </div>
- </div>
- <div>
-  <div class="thumb">
-   <div class="row">
-    <div class="col-lg-6 align-self-center">
-     <div class="left-text">
-      <h4>Cellular Agriculture</h4>
-       
-      <p>
-        Neo Meats is a cell-based meat and seafood company the first of its kind in South-East Asia.
-        Our mission is to bring delicious, sustainable, healthy seafood to your table, using our technology to grow meat from healthy cells instead of animals.
-        crustaceans like shrimps, crabs, Chicken, Lamb, Fish, lobsters and are the first in the world to do so using cellular agriculture technology.
+       Chemicals, Plastics and Composites Building Materials, Concrete and Cement, Energy Storage, desalination, 
+       Graphene Electronics, Sensors and Devices, Consumer Goods, Coatings and Films, 
+       hygiene and healthcare, Medical science, Drug delivery, Biomedical applications, Graphene medical devices, 
+       Graphene in batteries and supercapacitors, wearable technology, Graphene transistors and Semiconductors, Graphene as a lubricant.
       </p>
      </div>
     </div>
