--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ title: Home
             </div>
             <div class="col-lg-6 align-self-center">
              <div class="right-image">
-              <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
+              <img src="./assets/images/cellularagriculture.jpg" alt="" />
              </div>
             </div>
            </div>
@@ -389,7 +389,7 @@ title: Home
     </div>
     <div class="col-lg-6 align-self-center">
      <div class="right-image">
-      <img src="./assets/images/EnergyEfficiency.jpg" alt="" />
+      <img src="./assets/images/graphene.jpg" alt="" />
      </div>
     </div>
    </div>
