--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ title: Home
         </div>
         <div class="col-lg-6 align-self-center">
          <div class="right-image">
-          <!-- <img src="./assets/images/EnergyEfficiency.jpg" alt="" /> -->
+         <img src="./assets/images/cellularagriculture.jpg" alt="" />
          </div>
         </div>
        </div>
@@ -375,7 +375,7 @@ title: Home
               </div>
               <div class="col-lg-6 align-self-center">
                <div class="right-image">
-                <!-- <img src="./assets/images/EnergyEfficiency.jpg" alt="" /> -->
+                <img src="./assets/images/graphene.jpg" alt="" />
                </div>
               </div>
              </div>
@@ -415,10 +415,7 @@ title: Home
          <div class="down-content">
           <h5>
             <br>
-            Clinical Trials,
-Community Awareness.
-Education,
-Workshops
+            Clinical Trials, Community Awareness. Education, Workshops
           </h5>
          </div>
         </div>
