Solution Cards updated

--- a/index.html
+++ b/index.html
@@ -76,35 +76,35 @@ title: Home
 <div class="section wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
   <div class="container">
     <div class="row">
-      <div class="col-lg-1 col-6">
+      <div class="col-lg-1 col-3">
         <div class="industries">
           <a href="https://www.vizagsteel.com/" target="_blank">
             <img src="https://www.vizagsteel.com/photos/logonew.jpg">
           </a>
         </div>
       </div>
-      <div class="col-lg-1 col-6">
+      <div class="col-lg-1 col-3">
         <div class="industries">
           <a href="https://www.hindustanpetroleum.com/" target="_blank">
             <img src="./assets/images/logo/hpl.png">
           </a>
         </div>
       </div>
-      <div class="col-lg-1 col-6">
+      <div class="col-lg-1 col-3">
         <a href="https://www.ntpc.co.in/" target="_blank">
           <div class="industries">
             <img src="./assets/images/logo/ntpc.png" alt="" />
           </div>
         </a>
       </div>
-      <div class="col-lg-1 col-6">
+      <div class="col-lg-1 col-3">
         <a href="https://www.hslvizag.in/" target="_blank">
           <div class="industries">
             <img src="./assets/images/logo/hsl.png" alt="" />
           </div>
         </a>
       </div>
-      <div class="col-lg-1 col-6">
+      <div class="col-lg-1 col-3">
         <a href="https://vizagport.com/" target="_blank">
           <div class="industries">
             <img src="./assets/images/logo/vpt.jpg" alt="" />
@@ -352,132 +352,88 @@ title: Home
   </div>
 </div>
 
-<!-- Resources required -->
-<div id="resources" class="services section">
+<div class="section customSection">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-heading wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
-          <h4>Solutions Provided</h4>
-          <div class="line-dec"></div>
+    <div class="section-heading wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
+      <h4>Solutions Provided</h4>
+      <div class="line-dec"></div>
+      <br><br>
+    </div>
+    <div class="row wow fadeInDown">
+      <div class="col-lg-3" data-wow-duration="1s" data-wow-delay="0.5s">
+        <div class="solutionCards">
+          <h5>
+            Clinical Trials, Community Awareness, Education, Workshops
+          </h5>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="loop owl-carousel">
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5>
-                    <br>
-                    Clinical Trials, Community Awareness. Education, Workshops
-                  </h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5>
-                    <br>Cellular Agriculture
-                    BioTechnology
-                    Regenerative Medicine.
-                    Tissue Engineering
-                  </h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5><br>Public Transportation
-                    and Commute Electrification.</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="portfolio-item customCards" id="infrastructureContent">
-                <div class="down-content">
-                  <h5><br>Infrastructure Development</h5>
-                  <!-- <p>
-            It involves improvement of the quality of the various components of infrastructure, such as roads, power, water and sanitation.
-            The infrastructure sector primarily comprises of electricity, Roads, 
-            Railways, Irrigation, Water supply and sanitation, 
-            Infrastructure is considered to be the key for promoting sustainable and inclusive economic growth. So a great deal of policy emphasis has 
-            been placed on infrastructure devlopment for augmenting growth, Productivity and quality of life of the citizens of the developing country.
-            Clean Drinking Water, Seawater Reverse Osmosis Desalination (SWRO) is a process that removes salt and other contamination from salt water to produce fresh water.
-          </p> -->
-                </div>
-              </div>
-            </div>
-
-          </div>
+      <div class="col-lg-3">
+        <div class="solutionCards">
+          <h5>
+            Cellular Agriculture
+            BioTechnology
+            Regenerative Medicine
+            Tissue Engineering
+          </h5>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="solutionCards">
+          <h5>
+            Public Transportation
+            and Commute Electrification.
+          </h5>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="solutionCards">
+          <h5>
+            Infrastructure Development
+          </h5>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Resources required -->
-<div id="resources" class="services section">
+<div class="section customSection">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-heading wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
-          <h4>Resources Required</h4>
-          <div class="line-dec"></div>
+    <div class="section-heading wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
+      <h4>Resources Required</h4>
+      <div class="line-dec"></div>
+      <br><br>
+    </div>
+    <div class="row wow fadeInDown">
+      <div class="col-lg-3" data-wow-duration="1s" data-wow-delay="0.5s">
+        <div class="solutionCards">
+          <h5>
+            Carbon Capture Storage
+            Technology from Various Partners
+          </h5>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="loop owl-carousel">
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5>
-                    <br>
-                    Carbon Capture Storage
-                    Technology from Various Partners
-                  </h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5>
-                    <br>R&D , Lab, for Rapid Prototyping and Additive Manufacturing,
-                    3d Bioprinters
-                    Technology Transfer,
-                    Blueprint
-                  </h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5><br>Smart Manufacturing Unit For Automotive and Energy Storage Solutions. IIOT.</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="portfolio-item customCards">
-                <div class="down-content">
-                  <h5><br>Proper Funding VC Back Up, Government, Start Up India, IP, Business model.</h5>
-                </div>
-              </div>
-            </div>
-
-          </div>
+      <div class="col-lg-3">
+        <div class="solutionCards">
+          <h5>
+            R&D , Lab, for Rapid Prototyping and Additive Manufacturing,
+            3d Bioprinters
+            Technology Transfer,
+            Blueprint
+          </h5>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="solutionCards">
+          <h5>
+            Smart Manufacturing Unit For Automotive and Energy Storage Solutions. IIOT.
+          </h5>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="solutionCards">
+          <h5>
+            Proper Funding VC Back Up, Government, Start Up India, IP, Business model.
+          </h5>
         </div>
       </div>
     </div>
@@ -495,49 +451,30 @@ title: Home
       </div>
     </div>
   </div>
-  <div class="container-fluid wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
+</div>
+
+<div class="section wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
+  <div class="container">
     <div class="row">
-      <div class="col-lg-12">
-        <div class="loop owl-carousel">
-          <div class="item">
-            <a href="https://www.startupindia.gov.in/">
-              <div class="portfolio-item">
-                <div class="thumb">
-                  <img src="./assets/images/partners/startup-india-logo.png" alt="" />
-                </div>
-                <div class="down-content">
-                  <h4>Start Up India<br><br></h4>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div class="item">
-            <a href="https://www.ccamp.res.in">
-              <div class="portfolio-item">
-                <div class="thumb">
-                  <img src="./assets/images/partners/ccamp.png" alt="" />
-                </div>
-                <div class="down-content">
-                  <h4>CCAMP<br><br></h4>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div class="item">
-            <a href="https://amtz.in/">
-              <div class="portfolio-item">
-                <div class="thumb">
-                  <img src="./assets/images/partners/amtz.png" alt="" />
-                </div>
-                <div class="down-content">
-                  <h4>Andhra Pradesh MedTech Zone</h4>
-                </div>
-              </div>
-            </a>
-          </div>
-
+      <div class="col-lg-2 col-3">
+        <div class="industries">
+          <a href="https://www.startupindia.gov.in/" target="_blank">
+            <img src="./assets/images/partners/startup-india-logo.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-2 col-3">
+        <div class="industries">
+          <a href="https://www.ccamp.res.in" target="_blank">
+            <img src="./assets/images/partners/ccamp.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-2 col-3">
+        <div class="industries">
+          <a href="https://amtz.in/" target="_blank">
+            <img src="./assets/images/partners/amtz.png">
+          </a>
         </div>
       </div>
     </div>
