--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
             <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
               <div class="row">
                 <div class="col-lg-12">
-                  <h2>De-industrialization & anti-industrialism</h2>
+                  <h2 class="sectionHeading">De-industrialization & anti-industrialism</h2>
                   <b>
                     Area of interest of Works
                   </b>
@@ -75,7 +75,7 @@ title: Home
 
 <div class="section wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
   <div class="container">
-    <div class="row">
+    <div class="row justifyCenter">
       <div class="col-lg-1 col-3">
         <div class="industries">
           <a href="https://www.vizagsteel.com/" target="_blank">
@@ -360,14 +360,14 @@ title: Home
       <br><br>
     </div>
     <div class="row wow fadeInDown">
-      <div class="col-lg-3" data-wow-duration="1s" data-wow-delay="0.5s">
+      <div class="col-lg-3 industriesCards" data-wow-duration="1s" data-wow-delay="0.5s">
         <div class="solutionCards">
           <h5>
             Clinical Trials, Community Awareness, Education, Workshops
           </h5>
         </div>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 industriesCards">
         <div class="solutionCards">
           <h5>
             Cellular Agriculture
@@ -377,7 +377,7 @@ title: Home
           </h5>
         </div>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 industriesCards">
         <div class="solutionCards">
           <h5>
             Public Transportation
@@ -385,7 +385,7 @@ title: Home
           </h5>
         </div>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 industriesCards">
         <div class="solutionCards">
           <h5>
             Infrastructure Development
@@ -404,7 +404,7 @@ title: Home
       <br><br>
     </div>
     <div class="row wow fadeInDown">
-      <div class="col-lg-3" data-wow-duration="1s" data-wow-delay="0.5s">
+      <div class="col-lg-3 industriesCards" data-wow-duration="1s" data-wow-delay="0.5s">
         <div class="solutionCards">
           <h5>
             Carbon Capture Storage
@@ -412,7 +412,7 @@ title: Home
           </h5>
         </div>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 industriesCards">
         <div class="solutionCards">
           <h5>
             R&D , Lab, for Rapid Prototyping and Additive Manufacturing,
@@ -422,14 +422,14 @@ title: Home
           </h5>
         </div>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 industriesCards">
         <div class="solutionCards">
           <h5>
             Smart Manufacturing Unit For Automotive and Energy Storage Solutions. IIOT.
           </h5>
         </div>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 industriesCards">
         <div class="solutionCards">
           <h5>
             Proper Funding VC Back Up, Government, Start Up India, IP, Business model.
@@ -455,22 +455,22 @@ title: Home
 
 <div class="section wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-2 col-3">
+    <div class="row justifyCenter">
+      <div class="col-lg-2 col-4">
         <div class="industries">
           <a href="https://www.startupindia.gov.in/" target="_blank">
             <img src="./assets/images/partners/startup-india-logo.png">
           </a>
         </div>
       </div>
-      <div class="col-lg-2 col-3">
+      <div class="col-lg-2 col-4">
         <div class="industries">
           <a href="https://www.ccamp.res.in" target="_blank">
             <img src="./assets/images/partners/ccamp.png">
           </a>
         </div>
       </div>
-      <div class="col-lg-2 col-3">
+      <div class="col-lg-2 col-4">
         <div class="industries">
           <a href="https://amtz.in/" target="_blank">
             <img src="./assets/images/partners/amtz.png">
